# tauri-plugin-positioner

./: .gitignore  .license_template  .npmrc  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsup.config.ts
.changes/: chore-update-deps.md  config.json  docs-update-readme.md  feat-tray-pos.md  initial-release.md  readme.md  tauri-v1.md  update-deps.md  update-docs.md  update-metadata.md  update-tauri.md  use-builder-pattern.md
.github/: dependabot.yml
.github/workflows/: audit-javascript.yml  audit.yml  clippy.yml  covector-status.yml  covector-version-or-publish.yml  format-javascript.yml  format-rust.yml  format.yml  lint-javascript.yml  lint-rust.yml  test.yml
client/: index.ts
client-dist/: index.d.ts  index.js
dist-js/: index.cjs  index.d.ts  index.js  index.min.js  index.min.js.map  index.mjs  index.mjs.map
examples/svelte-app/: package.json  pnpm-lock.yaml
examples/svelte-app/src/: App.svelte
examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-app/src-tauri/src/: main.rs
src/: ext.rs  lib.rs
webview-dist/: index.d.ts  index.js  index.min.js  index.mjs
webview-src/: index.ts
