[package]
name = "tauri-plugin-positioner"
version = "1.0.0"
authors = [ "Jonas Kruckenberg" ]
description = "Helps positioning your tauri windows."
edition = "2021"
exclude = [ "/examples", "/webview-dist", "/webview-src", "node_modules" ]
license = "MIT"
repository = "https://github.com/JonasKruckenberg/tauri-plugin-positioner"
readme = "README.md"
categories = [ "gui", "web-programming" ]
keywords = [ "tauri-plugin" ]

[dependencies]
tauri = { version = "1.0.0-rc.3", features = [ "api-all" ] }
serde = "1.0.136"
serde_json = "1.0.79"
serde_repr = "0.1.7"

[features]
system-tray = [ "tauri/system-tray" ]
