[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "You" ]
repository = ""
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.5", features = ["api-all", "system-tray"] }
tauri-plugin-positioner = { path = "../../../", features = ["system-tray"] }

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
